objects/Prevent_Field_Update__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <description>This is the FIeld&apos;s API Name</description>
        <inlineHelpText>This is the FIeld&apos;s API Name</inlineHelpText>
        <label>Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>This is the Object&apos;s API Name</description>
        <inlineHelpText>This is the Object&apos;s API Name</inlineHelpText>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Prevent Field Update</label>
    <pluralLabel>Prevent Field Updates</pluralLabel>
</CustomObject>